# BlockMaze

./: .gitignore  README.md  install.md
clique/: .gitignore  abc.json  clique.json  deployContract  depositvk.txt  dlv_debug  newDeployContract  redeemvk.txt  sendvk.txt  transaction  transaction.txt  updatevk.txt  vk.txt
go-ethereum/: interfaces.go
go-ethereum/accounts/: accounts.go
go-ethereum/core/: blockchain.go  chain_makers.go  evm.go  genesis.go  state_processor.go  state_transition.go  tx_pool.go
go-ethereum/crypto/: crypto.go
go-ethereum/eth/: api_backend.go  backend.go  handler.go  peer.go  protocol.go
go-ethereum/ethclient/: ethclient.go
go-ethereum/les/: odr_test.go  server.go
go-ethereum/light/: odr_test.go  txpool.go
go-ethereum/merkle/: merkle.go
go-ethereum/miner/: agent.go  worker.go
go-ethereum/mobile/: ethclient.go
go-ethereum/node/: api.go
go-ethereum/p2p/: server.go
go-ethereum/params/: protocol_params.go
libsnark-hdsnark/: CMakeLists.txt  README.md
libsnark-hdsnark/src/: CMakeLists.txt
libsnark-hdsnark/src/addition/: gadget.hpp  main.cpp  main_fail.cpp  util.h
libsnark-hdsnark/src/additionLess/: readme.md
libsnark-hdsnark/src/comparison/: cmp_test.cpp  comparison_gadget.tcc  comparison_gaget.hpp  less_cmp_test.cpp  main.cpp  readme.md
libsnark-hdsnark/src/data/: 1.md  2.md  3.md  4.md
libsnark-hdsnark/src/deposit/: IncrementalMerkleTree.hpp  aaaa.cpp  depositcgo.cpp  depositcgo.hpp  getpvk.cpp  main.cpp  mmmm.go  readme.md
libsnark-hdsnark/src/deposit/cgomain/: deposit.go
libsnark-hdsnark/src/deposit/cgomain/maingo/: main.go
libsnark-hdsnark/src/deposit/circuit/: commitment.tcc  gadget.tcc  merkle.tcc  note.tcc
libsnark-hdsnark/src/gen_data/gen_SHA256_256bits/src/: main.rs
libsnark-hdsnark/src/gen_data/gen_SHA256_512bits/: generate_sha256_gadget_tests.py
libsnark-hdsnark/src/gtest/: test_circuit.cpp  test_joinsplit.cpp  test_merkletree.cpp  test_noteencryption.cpp
libsnark-hdsnark/src/hdsnark/: data.md  gadget.hpp  main.cpp  snark.hpp  test.cpp  test.h
libsnark-hdsnark/src/mint/: Note.h  main.cpp  mint_gadget.cpp  mintcgo.cpp  mintcgo.hpp  readme.md
libsnark-hdsnark/src/mint/cgo/: cgo.go  vk.txt
libsnark-hdsnark/src/mint/circuit/: add_cmp.tcc  commitment.tcc  comparison.tcc  gadget.tcc  note.tcc  utils.tcc
libsnark-hdsnark/src/pack_gadget/: main.cpp
libsnark-hdsnark/src/redeem/: main.cpp  readme.md  redeem_gadget.cpp  redeem_gadget.hpp  redeemcgo.cpp  redeemcgo.hpp  uint256.h
libsnark-hdsnark/src/redeem/cgomain/: redeem.go  redeemvk.txt
libsnark-hdsnark/src/redeem/circuit/: commitment2.tcc  gadget.tcc  note.tcc  sub_cmp.tcc
libsnark-hdsnark/src/send/: main.cpp  readme.md  sendcgo.cpp
libsnark-hdsnark/src/send/cgomain/: send.go  sendvk.txt
libsnark-hdsnark/src/send/circuit/: note.tcc  utils.tcc
libsnark-hdsnark/src/shaOneBlock/: gadget.hpp  main.cpp  test.h  test_notcp.cpp
libsnark-hdsnark/src/shaThreeBlock/: main.cpp
libsnark-hdsnark/src/shaTwoBlock/: main.cpp
libsnark-hdsnark/src/subgadget/addition/: addByOrder.cpp  addPack.cpp  gadget.hpp  main_fail.cpp  readme.md
libsnark-hdsnark/src/subgadget/additionLess/: main.cpp  readme.md  util.h
libsnark-hdsnark/src/subgadget/comparison/: cmp_test.cpp  less_cmp_test.cpp  main.cpp
libsnark-hdsnark/src/subgadget/gen_data/: test.cpp
libsnark-hdsnark/src/subgadget/gen_data/gen_sha256_768bits/: main.rs
libsnark-hdsnark/src/subgadget/gen_data/gen_sha256_two_block_data/: main.rs
libsnark-hdsnark/src/subgadget/hdsnark/: gadget.hpp  main.cpp  premium_computation_gadget.hpp  snark.hpp
libsnark-hdsnark/src/subgadget/mintGadget/: main.cpp  readme.md
libsnark-hdsnark/src/subgadget/pack_gadget/: main.cpp  uint256.h  util.h
libsnark-hdsnark/src/subgadget/shaThreeBlock/: gadget.hpp  main.cpp  snark.hpp
libsnark-hdsnark/src/subgadget/shaTwoBlock/: gadget.hpp  main.cpp  snark.hpp
libsnark-hdsnark/src/subgadget/subtractionLess/: main.cpp  util.h
libsnark-hdsnark/src/subgadget/threeBlock/: main.cpp  util.h
libsnark-hdsnark/src/subgadget/twoBlock/: main.cpp
libsnark-hdsnark/src/update/: IncrementalMerkleTree.tcc  VNT.h  main.cpp  readme.md  updatecgo.cpp  updatecgo.hpp
libsnark-hdsnark/src/update/cgomain/: update.go
libsnark-hdsnark/src/update/circuit/: gadget.tcc  merkle.tcc  note.tcc  utils.tcc
libsnark-hdsnark/src/zkAccount/: Address.cpp  Address.hpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  VNT.h  prf.cpp  prf.h  util.cpp  util.h
libsnark-hdsnark/src/zkAccount/circuit/: cmp_test.cpp  commitment.tcc  gadget.tcc  note.tcc  prfs.tcc  utils.tcc
libsnark-vnt/: CMakeLists.txt
libsnark-vnt/src/: CMakeLists.txt
libsnark-vnt/src/deposit/: Note.h  VNT.h  depositcgo.cpp  depositcgo.hpp  getpvk.cpp  main.cpp  readme.md  util.h
libsnark-vnt/src/deposit/circuit/: commitment.tcc  gadget.tcc  note.tcc
libsnark-vnt/src/mint/: getpvk.cpp  main.cpp  mintcgo.cpp  mintcgo.hpp  readme.md  util.h
libsnark-vnt/src/mint/circuit/: add_cmp.tcc  commitment.tcc  gadget.tcc  note.tcc
libsnark-vnt/src/redeem/: Note.h  getpvk.cpp  main.cpp  readme.md  redeemcgo.cpp  redeemcgo.hpp  util.h
libsnark-vnt/src/redeem/circuit/: commitment.tcc  comparison.tcc  gadget.tcc  note.tcc  sub_cmp.tcc  utils.tcc
libsnark-vnt/src/send/: Note.h  getpvk.cpp  main.cpp  readme.md  sendcgo.cpp  sendcgo.hpp  util.h
libsnark-vnt/src/send/circuit/: commitment.tcc  comparison.tcc  gadget.tcc  less_cmp.tcc  note.tcc
libsnark-vnt/src/update/: IncrementalMerkleTree.tcc  getpvk.cpp  main.cpp  updatecgo.cpp
pow/: pow.json
(+89 files in other folders)
